.provarCaches/00D410000011HE0EAM/objects/asp04__Authorisation__c.object
<CustomObject>
    <fields>
        <fullName>asp04__Account_Name__c</fullName>
        <inlineHelpText>Records the name on the bank account or the cardholder name for future reference</inlineHelpText>
        <label>Account Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Account_Reference__c</fullName>
        <inlineHelpText>A partially obscured record of the bank account or credit card number for future reference</inlineHelpText>
        <label>Account Reference</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Asperato_Repeat_Token__c</fullName>
        <inlineHelpText>One of a pair of fields needed to make a repeat payment request</inlineHelpText>
        <label>Asperato Repeat Token</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Billing_Address_City__c</fullName>
        <inlineHelpText>Records the city in the billing address that was captured on the payment page</inlineHelpText>
        <label>Billing Address City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Billing_Address_Country__c</fullName>
        <inlineHelpText>Records the country in the billing address that was captured on the payment page.</inlineHelpText>
        <label>Billing Address Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Billing_Address_PostalCode__c</fullName>
        <inlineHelpText>Records the postal code in the billing address that was captured on the payment page</inlineHelpText>
        <label>Billing Address PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Billing_Address_State__c</fullName>
        <inlineHelpText>Records the state/county in the billing address that was captured on the payment page</inlineHelpText>
        <label>Billing Address State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Billing_Address_Street__c</fullName>
        <inlineHelpText>Records the street(s) in the billing address that was captured on the payment page</inlineHelpText>
        <label>Billing Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>asp04__CPA_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the customer has given permission for card details to be used to collect automatic payments.</inlineHelpText>
        <label>CPA Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>asp04__Cancel_Endpoint_Long__c</fullName>
        <inlineHelpText>The link or URL that will be executed if the customer presses the cancel link on the payment page.</inlineHelpText>
        <label>Cancel Endpoint</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asp04__Cancel_Endpoint__c</fullName>
        <inlineHelpText>Endpoint to use when a cancel is requested from a transaction
The field is deprecated - use the &apos;long&apos; version instead</inlineHelpText>
        <label>Cancel Endpoint (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Card_Type__c</fullName>
        <inlineHelpText>The type of credit or debit card, or `Not Applicable` for the other Authorisation Types</inlineHelpText>
        <label>Card Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Company_Name__c</fullName>
        <inlineHelpText>Records the company name that was captured on the payment page.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Custom_Reference__c</fullName>
        <inlineHelpText>A custom reference (to be sent to the PSP) for this authorisation. Note that not all PSPs support custom references, and some often have restrictions on the maximum length of a reference.</inlineHelpText>
        <label>Custom Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Customer_ID__c</fullName>
        <defaultValue>$Setup.asp04__AsperatoOneSettings__c.asp04__Customer_ID__c</defaultValue>
        <inlineHelpText>This is the Asperato Customer ID. It defaults to the value that is entered into the Asperato Getting Started page.</inlineHelpText>
        <label>Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Direct_Debit_Error_Code__c</fullName>
        <inlineHelpText>In the event that the BACS system passes back an error response this will contain the raw BACS error code.</inlineHelpText>
        <label>Direct Debit Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Email__c</fullName>
        <inlineHelpText>Records the email address that was captured on the payment page.</inlineHelpText>
        <label>Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Error_Code__c</fullName>
        <inlineHelpText>This is a santised error code that is created by Asperato when a transaction fails. It is based on the data that is returned from the Payment Service Provider(s). The actual codes are recorded in the Sanitised responses section of this document.</inlineHelpText>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Expiry_Date__c</fullName>
        <inlineHelpText>The date on the which the authorisation will expire.</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asp04__Fail_Endpoint_Long__c</fullName>
        <inlineHelpText>The link or URL that will be executed if the customer presses the &apos;Finished&apos; button on the transaction error response screen.</inlineHelpText>
        <label>Fail Endpoint</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asp04__Fail_Endpoint__c</fullName>
        <inlineHelpText>Endpoint to use when a transaction fails
This field is deprecated - use the &apos;long&apos; version instead</inlineHelpText>
        <label>Fail Endpoint (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__First_Name__c</fullName>
        <inlineHelpText>Records the first name that was captured on the payment page.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>asp04__Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>asp04__Last_Name__c</fullName>
        <inlineHelpText>Records the last name that was captured on the payment page.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Mandate_Reference__c</fullName>
        <inlineHelpText>The reference for a Direct Debit mandate that will need to be displayed to the end customer in emails and other communication.</inlineHelpText>
        <label>Mandate Reference</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Merchant_Group__c</fullName>
        <inlineHelpText>The merchant group that should be used for this transaction. The default merchant group will be used if left blank. More information on Merchant groups is available here.</inlineHelpText>
        <label>Merchant Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__PSP_Passthrough_Parameters__c</fullName>
        <label>PSP Passthrough Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asp04__PSP_Repeat_Token__c</fullName>
        <inlineHelpText>One of a pair of fields needed to make a repeat payment request.</inlineHelpText>
        <label>Payment Service Provider Repeat Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Pass_Thru_Parameters__c</fullName>
        <inlineHelpText>A JSON REST format list of the parameters that were passed through from the starting URL.</inlineHelpText>
        <label>Pass Thru Parameters</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asp04__Payment_Route_Options__c</fullName>
        <inlineHelpText>A list of payment routes that could be used for this payment. The routes shown here will be reflected in the options shown on the payment page.</inlineHelpText>
        <label>Payment Route Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>asp04__Payment_Route_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>asp04__Payment_Route_Selected__c</fullName>
        <inlineHelpText>The payment route that was selected by the customer when they established the authorisation.</inlineHelpText>
        <label>Payment Route Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>asp04__Payment_Route_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>asp04__Status_Description__c</fullName>
        <inlineHelpText>A descriptive text showing the reason related to the current status. Might contain the reason for cancellation or failure for example.</inlineHelpText>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Status__c</fullName>
        <inlineHelpText>The current state of the Authorisation</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting submission</fullName>
                    <default>true</default>
                    <label>Awaiting submission</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Force</fullName>
                </value>
                <value>
                    <fullName>Submitted for cancellation</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asp04__Success_Endpoint_Long__c</fullName>
        <inlineHelpText>The link or URL that will be executed if the customer presses the &apos;Finished&apos; button on the transaction success response screen.</inlineHelpText>
        <label>Success Endpoint</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>asp04__Success_Endpoint__c</fullName>
        <inlineHelpText>Endpoint to use where the transaction is successful
This field is deprecated - use the &apos;long&apos; version instead</inlineHelpText>
        <label>Success Endpoint (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__eCommerce_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://&quot; + $Setup.asp04__AsperatoOneSettings__c.asp04__Server_URL__c + &quot;/PMWeb1?pmRef=&quot; + asp04__Customer_ID__c + &quot;&amp;aid=&quot; + Id + &quot;&amp;locale=&quot; + TEXT(asp04__Language__c), &quot;https://&quot; + $Setup.asp04__AsperatoOneSettings__c.asp04__Server_URL__c + &quot;/PMWeb1?pmRef=&quot; + asp04__Customer_ID__c + &quot;&amp;aid=&quot; + Id+ &quot;&amp;locale=&quot; + TEXT( asp04__Language__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the URL needed to invoke the Asperato paypage is an eCommerce situation. For example, this can be used to email someone a link by which to make a payment.</inlineHelpText>
        <label>eCommerce URL</label>
        <type>Text</type>
    </fields>
    <label>Authorisation</label>
    <listViews>
        <fullName>asp04__All</fullName>
        <columns>NAME</columns>
        <columns>asp04__Status__c</columns>
        <columns>asp04__Payment_Route_Selected__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AUTH-{000000000}</displayFormat>
        <label>Authorisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>asp04__SetupAsperatoOneValidation</fullName>
        <active>true</active>
        <description>Setup Asperato ONE before creating an authorisation.</description>
        <errorConditionFormula>ISNEW() &amp;&amp;   $Setup.asp04__AsperatoOneSettings__c.asp04__Customer_ID__c == &apos;&apos;</errorConditionFormula>
        <errorMessage>You must setup Asperato ONE before creating an authorisation.</errorMessage>
    </validationRules>
</CustomObject>